@@ -103,6 +103,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -140,6 +150,22 @@ operator|.
 name|hbase
 operator|.
 name|HConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|io
+operator|.
+name|RowResult
 import|;
 end_import
 
@@ -475,6 +501,62 @@ name|row
 operator|.
 name|length
 expr_stmt|;
+block|}
+comment|/**    * Create a batch operation.    * @param rr the RowResult    */
+specifier|public
+name|BatchUpdate
+parameter_list|(
+specifier|final
+name|RowResult
+name|rr
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|rr
+operator|.
+name|getRow
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|Cell
+argument_list|>
+name|entry
+range|:
+name|rr
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|this
+operator|.
+name|put
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|entry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Get the row lock associated with this update    * @return the row lock    */
 specifier|public
